# fastx

./: .gitignore  Cargo.toml  README.md
benches/: bench_comparison.rs
examples/: fasta_cat.rs  fasta_count.rs  fasta_count_indexed_chromosome.rs  fasta_count_remote_chromosome.rs  fasta_fetch_remote_indexed.rs  fasta_iterator.rs  fastq_cat.rs  fastq_sum.rs  fastq_sum_iterator.rs  fastq_sum_iterator_reuse.rs  fastx_cat.rs  fastx_count.rs  fastx_for_each.rs  fastx_read.rs  fastx_sum.rs
src/: bgzf.rs  fai.rs  gzi.rs  indexed.rs  lib.rs  remote.rs
