[package]
name = "fastx"
version = "0.1.0"
edition = "2018"
authors = ["Andreas Hauser <Andreas.Hauser@LMU.de>"]
description = "FastX reads Fasta and FastQ files with little overhead."
license = "CC-BY-SA-4.0"
keywords = ["sequencing", "genome", "Fasta", "FastQ", "bioinformatics"]
repository = "https://github.com/ahcm/fastx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "*"
