[package]
name = "fastx"
version = "0.6.0"
edition = "2021"
authors = ["Andreas Hauser <Andreas.Hauser@LMU.de>"]
description = "FastX reads Fasta and FastQ files with little overhead."
license = "CC-BY-SA-4.0"
keywords = ["sequencing", "genome", "Fasta", "FastQ", "bioinformatics"]
repository = "https://github.com/ahcm/fastx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rust-backend", "url"]
# Pure Rust implementation (miniz_oxide) - safe, portable, no C dependencies
rust-backend = ["flate2/rust_backend"]
# System zlib - typically fastest on systems with optimized zlib
zlib = ["flate2/zlib"]
# zlib-ng in compatibility mode - modern, fast implementation
zlib-ng-compat = ["flate2/zlib-ng-compat"]
# Native zlib-ng API - fastest option, but less compatible
zlib-ng = ["flate2/zlib-ng"]
# URL support for remote indexed FASTA/FASTQ files
url = ["dep:ureq"]

[dependencies]
memchr = "^2.7"
flate2 = { version = "^1.1", default-features = false }
ureq = { version = "^3", optional = true, default-features = false, features = ["socks-proxy", "rustls"] }
